Changes as follows: 1. Styles changes for mobile in both js and css files 2. Alignment issues fixed 3. more...

--- a/terminals/src/css/HomePage.css
+++ b/terminals/src/css/HomePage.css
@@ -16,10 +16,24 @@
     padding: 0px;
     width: 60vw;
     height: 70vh;
-    margin-top: 25px;
-    margin-right: 10vw;
-    margin-left: 10vw;
+
     align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    width: 100vw;
+  }
+  #taskbar {
+    display: flex;
+    background-color: #333;
+    border: 1px solid #fff;
+    margin: 0;
+  }
+  .titlebar-container {
+    bottom: 14px;
+    height: min-content;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
