--- a/terminals/src/css/Terminal.css
+++ b/terminals/src/css/Terminal.css
@@ -5,7 +5,7 @@
   box-sizing: border-box; /* Opera/IE 8+ */
   /* background-color: #151515; */
 
-  border: 3px solid #d4d4d4;
+  border: 1px solid #d4d4d4;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 12px;
   border-color: #f0f0f0;
@@ -123,6 +123,15 @@ button:focus {
 }
 
 @media only screen and (max-width: 600px) {
+  .terminal {
+    border: none;
+    margin-bottom: 44px;
+    background-color: #1e1e1e;
+  }
+  .terminal * {
+    background-color: #1e1e1e;
+  }
+
   .bg {
     display: none;
   }
@@ -136,8 +145,8 @@ button:focus {
 
   .main {
     position: relative;
-    height: 414px;
-    width: 90vw;
+    height: 454px;
+    width: 75vw;
     align-self: center;
   }
 }
